--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "1.1.0",
     "@angular/animations": "10.0.14",
     "@angular/common": "10.0.14",
     "@angular/compiler": "10.0.14",
@@ -19,30 +20,30 @@
     "@angular/platform-browser": "10.0.14",
     "@angular/platform-browser-dynamic": "10.0.14",
     "@angular/router": "10.0.14",
-    "core-js": "3.6.5",
-    "rxjs": "6.6.2",
-    "tslib": "2.0.1",
-    "zone.js": "0.11.1",
-    "@ngrx/store": "10.0.0",
-    "ngx-malihu-scrollbar": "9.0.0",
-    "ng2-dragula": "2.1.1",
-    "ng2-charts": "2.4.0",
-    "chart.js": "2.9.3",
-    "d3": "6.1.0",
-    "@swimlane/ngx-charts": "14.0.0",
-    "echarts": "4.9.0",
-    "echarts-gl": "1.1.1",
-    "ngx-echarts": "5.1.2",
-    "@agm/core": "1.1.0",
-    "leaflet": "1.6.0",
     "@asymmetrik/ngx-leaflet": "8.1.0",
-    "animate.css": "4.1.0",
-    "web-animations-js": "2.3.2",
-    "@types/jquery": "3.5.1",
     "@fullcalendar/angular": "4.4.5-beta",
     "@fullcalendar/core": "4.4.0",
     "@fullcalendar/daygrid": "4.4.0",
-    "ng-zorro-antd": "9.3.0"
+    "@ngrx/store": "10.0.0",
+    "@swimlane/ngx-charts": "14.0.0",
+    "@types/jquery": "3.5.1",
+    "angular-bootstrap-md": "^10.0.0",
+    "animate.css": "4.1.0",
+    "chart.js": "2.9.3",
+    "core-js": "3.6.5",
+    "d3": "6.1.0",
+    "echarts": "4.9.0",
+    "echarts-gl": "1.1.1",
+    "leaflet": "1.6.0",
+    "ng-zorro-antd": "9.3.0",
+    "ng2-charts": "2.4.0",
+    "ng2-dragula": "2.1.1",
+    "ngx-echarts": "5.1.2",
+    "ngx-malihu-scrollbar": "9.0.0",
+    "rxjs": "6.6.2",
+    "tslib": "2.0.1",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.11.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1000.8",
