--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "medic-app": {
+    "itap": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "aot": true,
-            "outputPath": "dist/medic-app",
+            "outputPath": "dist/itap",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -86,18 +86,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "medic-app:build"
+            "browserTarget": "itap:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "medic-app:build:production"
+              "browserTarget": "itap:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "medic-app:build"
+            "browserTarget": "itap:build"
           }
         },
         "test": {
@@ -151,7 +151,7 @@
         }
       }
     },
-    "medic-app-e2e": {
+    "itap-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -160,11 +160,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "medic-app:serve"
+            "devServerTarget": "itap:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "medic-app:serve:production"
+              "devServerTarget": "itap:serve:production"
             }
           }
         },
@@ -180,7 +180,7 @@
       }
     }
   },
-  "defaultProject": "medic-app",
+  "defaultProject": "itap",
   "cli": {
     "analytics": false
   }
